<resources>
    <string name="app_name">CoinFlip</string>
    <string name="switch_text">Simulation Mode</string>
    <string name="thumb_icon_description">A thumbs up icon</string>
    <string name="flip_text">Flip</string>
    <string name="reset_text">Reset</string>
    <string name="placeholder_text_total_flips">Total Flips: 0</string>
    <string name="placeholder_text_total_heads">Total heads: 0</string>
    <string name="placeholder_text_total_tails">Total Tails: 0</string>
    <string name="placeholder_text_heads_stats">Heads: 0%</string>
    <string name="placeholder_text_tails_stats">Tails: 0%</string>
    <string name="simulation_number_hint">Simulate Flips</string>
    <string name="simulation_btn_text">Simulate</string>
</resources>