<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_700"
    android:padding="20dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/main_activity_sw_simulate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coda"
        android:padding="5dp"
        android:text="@string/switch_text"
        android:textColor="@color/blue_500"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:thumbTint="@color/blue_500" />

    <ImageView
        android:id="@+id/main_activity_iv_thumbs"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/thumb_icon_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_sw_simulate"
        app:srcCompat="@drawable/ic_thumb_icon" />

    <Button
        android:id="@+id/main_activity_bt_flip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/blue_700"
        android:fontFamily="@font/coda"
        android:padding="4dp"
        android:text="@string/flip_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_activity_bt_reset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_iv_thumbs"
        app:layout_constraintVertical_bias="0.10" />

    <Button
        android:id="@+id/main_activity_bt_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/blue_700"
        android:fontFamily="@font/coda"
        android:padding="4dp"
        android:text="@string/reset_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/main_activity_bt_flip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_activity_bt_flip"
        app:layout_constraintTop_toTopOf="@+id/main_activity_bt_flip"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/main_actiity_tv_total_flips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coda"
        android:text="@string/placeholder_text_total_flips"
        android:textColor="@color/red_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_tv_total_tails"
        app:layout_constraintEnd_toEndOf="@+id/main_activity_tv_total_tails"
        app:layout_constraintStart_toStartOf="@+id/main_activity_tv_total_tails"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_bt_reset"
        app:layout_constraintVertical_bias="0.10"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/main_activity_tv_total_heads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coda"
        android:text="@string/placeholder_text_total_heads"
        android:textColor="@color/red_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_tv_total_tails" />

    <TextView
        android:id="@+id/main_activity_tv_total_tails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/coda"
        android:text="@string/placeholder_text_total_tails"
        android:textColor="@color/red_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_tv_total_heads"
        app:layout_constraintEnd_toEndOf="@+id/main_activity_tv_total_heads"
        app:layout_constraintStart_toStartOf="@+id/main_activity_tv_total_heads"
        app:layout_constraintTop_toBottomOf="@+id/main_actiity_tv_total_flips" />

    <ProgressBar
        android:id="@+id/main_activity_pb_heads"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="25"
        android:progressBackgroundTint="#3F51B5"
        android:progressTint="#3F51B5"
        android:scaleY="4"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_tails_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_heads_stats" />

    <ProgressBar
        android:id="@+id/main_activity_pb_tails"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:progressBackgroundTint="#3F51B5"
        android:progressTint="#3F51B5"
        android:scaleY="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_tails_stats" />

    <TextView
        android:id="@+id/main_activity_heads_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coda"
        android:text="@string/placeholder_text_heads_stats"
        android:textColor="@color/blue_500"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_pb_heads"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_tv_total_heads"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/main_activity_tails_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coda"
        android:text="@string/placeholder_text_tails_stats"
        android:textColor="@color/blue_700"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_pb_tails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_pb_heads" />

    <EditText
        android:id="@+id/main_activity_et_random_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:backgroundTint="@color/red_700"
        android:ems="10"
        android:fontFamily="@font/coda"
        android:hint="@string/random_number_hint"
        android:inputType="number"
        android:textColor="@color/red_700"
        android:textColorHint="@color/red_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_activity_bt_random_flips"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_pb_tails" />

    <Button
        android:id="@+id/main_activity_bt_random_flips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:backgroundTint="@color/red_700"
        android:text="@string/random_btn_text"
        app:layout_constraintBottom_toBottomOf="@+id/main_activity_et_random_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_activity_et_random_number"
        app:layout_constraintTop_toTopOf="@+id/main_activity_et_random_number" />

</androidx.constraintlayout.widget.ConstraintLayout>